--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,8 +2,9 @@ table {
 	border-collapse: collapse;
 }
 
-th, td {
+th, td, tr {
 	border: 1px solid black;
 	min-width: 100px;
 	padding: 3px;
+	height: 25px;
 }
